fixing code for backport